// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hosted login page characterization > escapes a hostile issuer and label rather than emitting markup 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <title>Sign in — OpenSesame</title>
  <style>
  :root {
    color-scheme: light dark;
    --bg: #0f1419;
    --fg: #e7ecf3;
    --muted: #9aa7b5;
    --accent: #3d8bfd;
    --danger: #f07178;
    --surface: #1c2430;
    --border: #2a3441;
  }
  @media (prefers-color-scheme: light) {
    :root {
      --bg: #f6f8fa;
      --fg: #1f2328;
      --muted: #59636e;
      --surface: #ffffff;
      --border: #d1d9e0;
    }
  }
  * { box-sizing: border-box; }
  body {
    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
    margin: 0;
    min-height: 100vh;
    background: var(--bg);
    color: var(--fg);
    line-height: 1.5;
  }
  main {
    max-width: 36rem;
    margin: 0 auto;
    padding: 2rem 1.25rem 3rem;
  }
  h1 { font-size: 1.5rem; margin: 0 0 0.5rem; }
  .lede { color: var(--muted); margin: 0 0 1.5rem; }
  .panel {
    background: var(--surface);
    border: 1px solid var(--border);
    border-radius: 12px;
    padding: 1.25rem;
    margin-bottom: 1rem;
  }
  .origin {
    font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
    word-break: break-all;
    font-size: 0.95rem;
  }
  .badge {
    display: inline-block;
    margin-top: 0.75rem;
    padding: 0.25rem 0.6rem;
    border-radius: 999px;
    background: color-mix(in srgb, var(--accent) 18%, transparent);
    color: var(--fg);
    font-size: 0.85rem;
  }
  ul.scopes { margin: 0.75rem 0 0; padding-left: 1.25rem; }
  .actions {
    display: flex;
    flex-wrap: wrap;
    gap: 0.75rem;
    margin-top: 1.25rem;
  }
  button, .btn {
    appearance: none;
    border: 0;
    border-radius: 8px;
    padding: 0.65rem 1rem;
    font: inherit;
    cursor: pointer;
  }
  .btn-primary { background: var(--accent); color: #fff; }
  .btn-danger { background: transparent; color: var(--danger); border: 1px solid var(--danger); }
  button:focus-visible, .btn:focus-visible {
    outline: 3px solid color-mix(in srgb, var(--accent) 55%, transparent);
    outline-offset: 2px;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
  }
</style>
</head>
<body>
  <main>
    <h1>Sign in</h1>
     <p class="lede">Authenticate to continue authorization at https://identity.example.</p>
     <div class="panel"><form method="post" action="/interaction/uid-fixed-for-snapshots/federated/start">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="issuer" value="https://e.test/&quot;&gt;&lt;script&gt;alert(1)&lt;/script&gt;"/>
         <button type="submit" class="btn btn-primary">Sign in with &lt;img src=x onerror=&quot;alert(1)&quot;&gt;</button>
       </form>
     <p class="lede">or continue without a provider</p><p>No session yet. Start a session to authorize this application.</p>
       <form method="post" action="/interaction/uid-fixed-for-snapshots/login">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="action" value="start"/>
         <button type="submit" class="btn">Start a session</button>
       </form></div>
  </main>
</body>
</html>"
`;

exports[`hosted login page characterization > offers nothing but a session when no upstream is allowlisted 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <title>Sign in — OpenSesame</title>
  <style>
  :root {
    color-scheme: light dark;
    --bg: #0f1419;
    --fg: #e7ecf3;
    --muted: #9aa7b5;
    --accent: #3d8bfd;
    --danger: #f07178;
    --surface: #1c2430;
    --border: #2a3441;
  }
  @media (prefers-color-scheme: light) {
    :root {
      --bg: #f6f8fa;
      --fg: #1f2328;
      --muted: #59636e;
      --surface: #ffffff;
      --border: #d1d9e0;
    }
  }
  * { box-sizing: border-box; }
  body {
    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
    margin: 0;
    min-height: 100vh;
    background: var(--bg);
    color: var(--fg);
    line-height: 1.5;
  }
  main {
    max-width: 36rem;
    margin: 0 auto;
    padding: 2rem 1.25rem 3rem;
  }
  h1 { font-size: 1.5rem; margin: 0 0 0.5rem; }
  .lede { color: var(--muted); margin: 0 0 1.5rem; }
  .panel {
    background: var(--surface);
    border: 1px solid var(--border);
    border-radius: 12px;
    padding: 1.25rem;
    margin-bottom: 1rem;
  }
  .origin {
    font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
    word-break: break-all;
    font-size: 0.95rem;
  }
  .badge {
    display: inline-block;
    margin-top: 0.75rem;
    padding: 0.25rem 0.6rem;
    border-radius: 999px;
    background: color-mix(in srgb, var(--accent) 18%, transparent);
    color: var(--fg);
    font-size: 0.85rem;
  }
  ul.scopes { margin: 0.75rem 0 0; padding-left: 1.25rem; }
  .actions {
    display: flex;
    flex-wrap: wrap;
    gap: 0.75rem;
    margin-top: 1.25rem;
  }
  button, .btn {
    appearance: none;
    border: 0;
    border-radius: 8px;
    padding: 0.65rem 1rem;
    font: inherit;
    cursor: pointer;
  }
  .btn-primary { background: var(--accent); color: #fff; }
  .btn-danger { background: transparent; color: var(--danger); border: 1px solid var(--danger); }
  button:focus-visible, .btn:focus-visible {
    outline: 3px solid color-mix(in srgb, var(--accent) 55%, transparent);
    outline-offset: 2px;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
  }
</style>
</head>
<body>
  <main>
    <h1>Sign in</h1>
     <p class="lede">Authenticate to continue authorization at https://identity.example.</p>
     <div class="panel"><p>No session yet. Start a session to authorize this application.</p>
       <form method="post" action="/interaction/uid-fixed-for-snapshots/login">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="action" value="start"/>
         <button type="submit" class="btn btn-primary">Start a session</button>
       </form></div>
  </main>
</body>
</html>"
`;

exports[`hosted login page characterization > promotes the hinted provider to first and primary 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <title>Sign in — OpenSesame</title>
  <style>
  :root {
    color-scheme: light dark;
    --bg: #0f1419;
    --fg: #e7ecf3;
    --muted: #9aa7b5;
    --accent: #3d8bfd;
    --danger: #f07178;
    --surface: #1c2430;
    --border: #2a3441;
  }
  @media (prefers-color-scheme: light) {
    :root {
      --bg: #f6f8fa;
      --fg: #1f2328;
      --muted: #59636e;
      --surface: #ffffff;
      --border: #d1d9e0;
    }
  }
  * { box-sizing: border-box; }
  body {
    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
    margin: 0;
    min-height: 100vh;
    background: var(--bg);
    color: var(--fg);
    line-height: 1.5;
  }
  main {
    max-width: 36rem;
    margin: 0 auto;
    padding: 2rem 1.25rem 3rem;
  }
  h1 { font-size: 1.5rem; margin: 0 0 0.5rem; }
  .lede { color: var(--muted); margin: 0 0 1.5rem; }
  .panel {
    background: var(--surface);
    border: 1px solid var(--border);
    border-radius: 12px;
    padding: 1.25rem;
    margin-bottom: 1rem;
  }
  .origin {
    font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
    word-break: break-all;
    font-size: 0.95rem;
  }
  .badge {
    display: inline-block;
    margin-top: 0.75rem;
    padding: 0.25rem 0.6rem;
    border-radius: 999px;
    background: color-mix(in srgb, var(--accent) 18%, transparent);
    color: var(--fg);
    font-size: 0.85rem;
  }
  ul.scopes { margin: 0.75rem 0 0; padding-left: 1.25rem; }
  .actions {
    display: flex;
    flex-wrap: wrap;
    gap: 0.75rem;
    margin-top: 1.25rem;
  }
  button, .btn {
    appearance: none;
    border: 0;
    border-radius: 8px;
    padding: 0.65rem 1rem;
    font: inherit;
    cursor: pointer;
  }
  .btn-primary { background: var(--accent); color: #fff; }
  .btn-danger { background: transparent; color: var(--danger); border: 1px solid var(--danger); }
  button:focus-visible, .btn:focus-visible {
    outline: 3px solid color-mix(in srgb, var(--accent) 55%, transparent);
    outline-offset: 2px;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
  }
</style>
</head>
<body>
  <main>
    <h1>Sign in</h1>
     <p class="lede">Authenticate to continue authorization at https://identity.example.</p>
     <div class="panel"><form method="post" action="/interaction/uid-fixed-for-snapshots/federated/start">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="issuer" value="https://shoo.dev"/>
         <button type="submit" class="btn btn-primary">Sign in with Google</button>
       </form>
<form method="post" action="/interaction/uid-fixed-for-snapshots/federated/start">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="issuer" value="http://127.0.0.1:9090"/>
         <button type="submit" class="btn">Sign in with a local test account</button>
       </form>
     <p class="lede">or continue without a provider</p><p>No session yet. Start a session to authorize this application.</p>
       <form method="post" action="/interaction/uid-fixed-for-snapshots/login">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="action" value="start"/>
         <button type="submit" class="btn">Start a session</button>
       </form></div>
  </main>
</body>
</html>"
`;

exports[`hosted login page characterization > renders a dev stack: the local broker alongside the production one 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <title>Sign in — OpenSesame</title>
  <style>
  :root {
    color-scheme: light dark;
    --bg: #0f1419;
    --fg: #e7ecf3;
    --muted: #9aa7b5;
    --accent: #3d8bfd;
    --danger: #f07178;
    --surface: #1c2430;
    --border: #2a3441;
  }
  @media (prefers-color-scheme: light) {
    :root {
      --bg: #f6f8fa;
      --fg: #1f2328;
      --muted: #59636e;
      --surface: #ffffff;
      --border: #d1d9e0;
    }
  }
  * { box-sizing: border-box; }
  body {
    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
    margin: 0;
    min-height: 100vh;
    background: var(--bg);
    color: var(--fg);
    line-height: 1.5;
  }
  main {
    max-width: 36rem;
    margin: 0 auto;
    padding: 2rem 1.25rem 3rem;
  }
  h1 { font-size: 1.5rem; margin: 0 0 0.5rem; }
  .lede { color: var(--muted); margin: 0 0 1.5rem; }
  .panel {
    background: var(--surface);
    border: 1px solid var(--border);
    border-radius: 12px;
    padding: 1.25rem;
    margin-bottom: 1rem;
  }
  .origin {
    font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
    word-break: break-all;
    font-size: 0.95rem;
  }
  .badge {
    display: inline-block;
    margin-top: 0.75rem;
    padding: 0.25rem 0.6rem;
    border-radius: 999px;
    background: color-mix(in srgb, var(--accent) 18%, transparent);
    color: var(--fg);
    font-size: 0.85rem;
  }
  ul.scopes { margin: 0.75rem 0 0; padding-left: 1.25rem; }
  .actions {
    display: flex;
    flex-wrap: wrap;
    gap: 0.75rem;
    margin-top: 1.25rem;
  }
  button, .btn {
    appearance: none;
    border: 0;
    border-radius: 8px;
    padding: 0.65rem 1rem;
    font: inherit;
    cursor: pointer;
  }
  .btn-primary { background: var(--accent); color: #fff; }
  .btn-danger { background: transparent; color: var(--danger); border: 1px solid var(--danger); }
  button:focus-visible, .btn:focus-visible {
    outline: 3px solid color-mix(in srgb, var(--accent) 55%, transparent);
    outline-offset: 2px;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
  }
</style>
</head>
<body>
  <main>
    <h1>Sign in</h1>
     <p class="lede">Authenticate to continue authorization at https://identity.example.</p>
     <div class="panel"><form method="post" action="/interaction/uid-fixed-for-snapshots/federated/start">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="issuer" value="https://shoo.dev"/>
         <button type="submit" class="btn btn-primary">Sign in with Google</button>
       </form>
<form method="post" action="/interaction/uid-fixed-for-snapshots/federated/start">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="issuer" value="http://127.0.0.1:9090"/>
         <button type="submit" class="btn">Sign in with a local test account</button>
       </form>
     <p class="lede">or continue without a provider</p><p>No session yet. Start a session to authorize this application.</p>
       <form method="post" action="/interaction/uid-fixed-for-snapshots/login">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="action" value="start"/>
         <button type="submit" class="btn">Start a session</button>
       </form></div>
  </main>
</body>
</html>"
`;

exports[`hosted login page characterization > renders the production shape: Google above an anonymous session 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <title>Sign in — OpenSesame</title>
  <style>
  :root {
    color-scheme: light dark;
    --bg: #0f1419;
    --fg: #e7ecf3;
    --muted: #9aa7b5;
    --accent: #3d8bfd;
    --danger: #f07178;
    --surface: #1c2430;
    --border: #2a3441;
  }
  @media (prefers-color-scheme: light) {
    :root {
      --bg: #f6f8fa;
      --fg: #1f2328;
      --muted: #59636e;
      --surface: #ffffff;
      --border: #d1d9e0;
    }
  }
  * { box-sizing: border-box; }
  body {
    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
    margin: 0;
    min-height: 100vh;
    background: var(--bg);
    color: var(--fg);
    line-height: 1.5;
  }
  main {
    max-width: 36rem;
    margin: 0 auto;
    padding: 2rem 1.25rem 3rem;
  }
  h1 { font-size: 1.5rem; margin: 0 0 0.5rem; }
  .lede { color: var(--muted); margin: 0 0 1.5rem; }
  .panel {
    background: var(--surface);
    border: 1px solid var(--border);
    border-radius: 12px;
    padding: 1.25rem;
    margin-bottom: 1rem;
  }
  .origin {
    font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
    word-break: break-all;
    font-size: 0.95rem;
  }
  .badge {
    display: inline-block;
    margin-top: 0.75rem;
    padding: 0.25rem 0.6rem;
    border-radius: 999px;
    background: color-mix(in srgb, var(--accent) 18%, transparent);
    color: var(--fg);
    font-size: 0.85rem;
  }
  ul.scopes { margin: 0.75rem 0 0; padding-left: 1.25rem; }
  .actions {
    display: flex;
    flex-wrap: wrap;
    gap: 0.75rem;
    margin-top: 1.25rem;
  }
  button, .btn {
    appearance: none;
    border: 0;
    border-radius: 8px;
    padding: 0.65rem 1rem;
    font: inherit;
    cursor: pointer;
  }
  .btn-primary { background: var(--accent); color: #fff; }
  .btn-danger { background: transparent; color: var(--danger); border: 1px solid var(--danger); }
  button:focus-visible, .btn:focus-visible {
    outline: 3px solid color-mix(in srgb, var(--accent) 55%, transparent);
    outline-offset: 2px;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
  }
</style>
</head>
<body>
  <main>
    <h1>Sign in</h1>
     <p class="lede">Authenticate to continue authorization at https://identity.example.</p>
     <div class="panel"><form method="post" action="/interaction/uid-fixed-for-snapshots/federated/start">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="issuer" value="https://shoo.dev"/>
         <button type="submit" class="btn btn-primary">Sign in with Google</button>
       </form>
     <p class="lede">or continue without a provider</p><p>No session yet. Start a session to authorize this application.</p>
       <form method="post" action="/interaction/uid-fixed-for-snapshots/login">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="action" value="start"/>
         <button type="submit" class="btn">Start a session</button>
       </form></div>
  </main>
</body>
</html>"
`;

exports[`hosted login page characterization > shows the continue path when a session cookie is already held 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <title>Sign in — OpenSesame</title>
  <style>
  :root {
    color-scheme: light dark;
    --bg: #0f1419;
    --fg: #e7ecf3;
    --muted: #9aa7b5;
    --accent: #3d8bfd;
    --danger: #f07178;
    --surface: #1c2430;
    --border: #2a3441;
  }
  @media (prefers-color-scheme: light) {
    :root {
      --bg: #f6f8fa;
      --fg: #1f2328;
      --muted: #59636e;
      --surface: #ffffff;
      --border: #d1d9e0;
    }
  }
  * { box-sizing: border-box; }
  body {
    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
    margin: 0;
    min-height: 100vh;
    background: var(--bg);
    color: var(--fg);
    line-height: 1.5;
  }
  main {
    max-width: 36rem;
    margin: 0 auto;
    padding: 2rem 1.25rem 3rem;
  }
  h1 { font-size: 1.5rem; margin: 0 0 0.5rem; }
  .lede { color: var(--muted); margin: 0 0 1.5rem; }
  .panel {
    background: var(--surface);
    border: 1px solid var(--border);
    border-radius: 12px;
    padding: 1.25rem;
    margin-bottom: 1rem;
  }
  .origin {
    font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
    word-break: break-all;
    font-size: 0.95rem;
  }
  .badge {
    display: inline-block;
    margin-top: 0.75rem;
    padding: 0.25rem 0.6rem;
    border-radius: 999px;
    background: color-mix(in srgb, var(--accent) 18%, transparent);
    color: var(--fg);
    font-size: 0.85rem;
  }
  ul.scopes { margin: 0.75rem 0 0; padding-left: 1.25rem; }
  .actions {
    display: flex;
    flex-wrap: wrap;
    gap: 0.75rem;
    margin-top: 1.25rem;
  }
  button, .btn {
    appearance: none;
    border: 0;
    border-radius: 8px;
    padding: 0.65rem 1rem;
    font: inherit;
    cursor: pointer;
  }
  .btn-primary { background: var(--accent); color: #fff; }
  .btn-danger { background: transparent; color: var(--danger); border: 1px solid var(--danger); }
  button:focus-visible, .btn:focus-visible {
    outline: 3px solid color-mix(in srgb, var(--accent) 55%, transparent);
    outline-offset: 2px;
  }
  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
  }
</style>
</head>
<body>
  <main>
    <h1>Sign in</h1>
     <p class="lede">Authenticate to continue authorization at https://identity.example.</p>
     <div class="panel"><form method="post" action="/interaction/uid-fixed-for-snapshots/federated/start">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="issuer" value="https://shoo.dev"/>
         <button type="submit" class="btn btn-primary">Sign in with Google</button>
       </form>
     <p class="lede">or continue without a provider</p><p>Signed in as <code>prn_fixed</code>.</p>
       <form method="post" action="/interaction/uid-fixed-for-snapshots/login">
         <input type="hidden" name="_csrf" value="csrf-fixed-for-snapshots"/>
         <input type="hidden" name="action" value="continue"/>
         <button type="submit" class="btn">Continue</button>
       </form></div>
  </main>
</body>
</html>"
`;
